<resources>
    <string name="app_name">staffScheduler</string>
    <string name="login_button">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addStaffBtn">Add Staff</string>
    <string name="positionField">Position</string>
    <string name="lastNameField">Last Name</string>
    <string name="firstNameField">First Name</string>
</resources>