<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_centerInParent="true"
    android:layout_height="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/button"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:inputType="text"
        android:ems="18"
        android:id="@+id/username"
        android:layout_alignParentStart ="true"
        android:hint="@string/username"
        android:isScrollContainer="false"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/username"
        android:layout_alignEnd="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="18"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:isScrollContainer="false" />

</RelativeLayout>